<resources>
    <string name="app_name">KvantProject</string>
    <string name="settings">Настройки</string>
    <string name="Oplata">Оплата проезда</string>
    <string name="enter_email">Введите вашу почту</string>
    <string name="enter">Войти</string>
    <string name="autorisation">Авторизация</string>
    <string name="User">Пользователь:</string>
    <string name="password">Пароль:</string>
    <string name="enter_password">Введите ваш пароль</string>
    <string name="enter_password2">Придумайте ваш пароль</string>
    <string name="chooseTheme">Выбор темы</string>
    <string name="changeOplata">Изменить способ оплаты</string>
    <string name="lightOn">Включить светлую тему</string>
    <string name="darkOn">Включить темную тему</string>
    <string name="regisrt">Регистрация</string>
    <string name="oplata2x">Оплатить</string>
    <string name="zaregisrt">Зарегистрироваться</string>
    <string name="wifiTExt">Сперва подключитесь к WIFI сети вашего автобуса</string>
    <string name="wifiSearch">Нажмите чтобы показать все сети WIFI</string>
    <string name="wifiHint">Введите пароль для выбранной сети</string>


</resources>