<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/autorisation"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="75dp"
        android:text="@string/User"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user_text"
        android:layout_marginLeft="35dp"
        android:layout_toRightOf="@+id/user_text"
        android:hint="@string/enter_name"
        android:minHeight="48dp"
        android:inputType="text"
        android:autofillHints="">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_text"
        android:layout_alignLeft="@+id/user_text"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_user"
        android:layout_alignRight="@+id/edit_user"
        android:layout_alignBottom="@+id/password_text"
        android:autofillHints=""
        android:hint="@string/enter_password"
        android:textColorHint="#78909C"
        android:inputType="textPassword"
        android:minHeight="48dp"/>

    <TextView
        android:id="@+id/attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text"
        android:layout_alignStart="@+id/password_text"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:text="@string/poprobovat"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:onClick="Login"
        android:text="@string/enter" />

    <TextView
        android:id="@+id/number_of_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/user_text"
        android:layout_alignTop="@+id/attempts"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login_locked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/attempts"
        android:layout_alignLeft="@+id/attempts"
        android:layout_alignEnd="@+id/edit_password"
        android:layout_alignRight="@+id/edit_password"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="57dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="visible" />

</RelativeLayout>